VirtualNetwork resource (#35)
